GNOME Bugzilla – Bug 785299
Copy Location doesn't.
Last modified: 2017-07-23 22:51:20 UTC
Sorry, but copy THESE WORDS with your mouse. Now switch to a xterm etc. shell window and middle click. Voila, those words are pasted. Now do CTRL+H , and upon an item, select Copy Location from the right context menu. Now switch again to the shell window, and middle click. Sorry, you will only paste THESE WORDS, not the location. The idea apparently is you will see ** Message: URL https://www.couch... in the shell window and then copy and paste that.
OK, additional proof: Pick a hyperlink on this bug page. Now in the right click menu pick Copy Link Location. This copies to the proper buffer and can be retrieved by a middle click in the shell.
I mean Copy Link Address, not Copy Link Location.
You're mixing up the primary selection (middle-click paste) and the normal clipboard. These are completely separate. Unless you actually select text, it's not going to be added to the primary selection and middle-click paste won't work. We'd been hoping to get rid of middle-click paste for years, since its semantics are very confusing, but so many people like it that it's probably here to stay.
Admit it, right click * Copy Location (in History), and * Copy Link Address (on hyperlinks) copy to different places, for no good reason! Also why does * Copy Location (in History), print things on Unix STDERR?
(In reply to Dan Jacobson from comment #4) > Admit it, right click > * Copy Location (in History), and > * Copy Link Address (on hyperlinks) > copy to different places, for no good reason! Interesting. There is no good reason for that difference, indeed. > Also why does > * Copy Location (in History), > print things on Unix STDERR? That was a bug, which I fixed after you reported it earlier!
Thanks for marking this as FIXED. I trust you now made * Copy Location (in History) act like * Copy Link Address (on hyperlinks) and not the other way around. Maybe if you fellows linked your changesets to the bug reports, as is common in other projects, with one click I could tell.
(In reply to Dan Jacobson from comment #6) > Thanks for marking this as FIXED. > I trust you now made > * Copy Location (in History) act like > * Copy Link Address (on hyperlinks) > and not the other way around. I actually have no idea. I failed to test it because of https://bugs.webkit.org/show_bug.cgi?id=174760 which just causes Epiphany to crash right away.... > Maybe if you fellows linked your changesets to the bug reports, as is common > in other projects, with one click I could tell. That usually happens actually... I don't know why the changeset sometimes doesn't get posted here. I think maybe because the bug was already closed when I pushed the change. Here is my change: https://git.gnome.org/browse/epiphany/commit/?id=d93cd8bf456dc6e3c793a64a14e628d7a459dfa7 One way or the other, it will now be consistent.