Consistently use the default clipboard

It's good to be consistent in how our menu items work. Currently the
copy item in the history dialog sets only the cut/paste clipboard, while
the web view context menu sets the primary selection too. GTK+ now has a
concept of default clipboard, so let's just use that.

https://bugzilla.gnome.org/show_bug.cgi?id=785299